// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cmds:init initializes module 1`] = `
"# my-module extension
comment = 'my-module extension'
default_version = '0.0.1'
module_pathname = '$libdir/my-module'
requires = 'citext,plpgsql'
relocatable = false
superuser = false
"
`;

exports[`cmds:init initializes module: module-only - argv 1`] = `
{
  "MODULENAME": "my-module",
  "_": [
    "init",
  ],
  "cwd": "<CWD>",
  "extensions": [
    "plpgsql",
    "citext",
  ],
  "name": "my-module",
}
`;

exports[`cmds:init initializes module: module-only - files 1`] = `
[
  "tsconfig.json",
  "pnpm-workspace.yaml",
  "package.json",
  "lerna.json",
  "launchql.json",
  "docker-compose.yml",
  "README.md",
  "Makefile",
  "LICENSE",
  ".questions.json",
  ".prettierrc.json",
  ".gitignore",
  ".eslintrc.json",
  "packages/my-module/tsconfig.json",
  "packages/my-module/package.json",
  "packages/my-module/my-module.control",
  "packages/my-module/launchql.plan",
  "packages/my-module/jest.config.js",
  "packages/my-module/README.md",
  "packages/my-module/Makefile",
  "packages/my-module/.questions.json",
  "packages/my-module/src/index.ts",
  "packages/my-module/__tests__/first.test.ts",
  "bin/install.sh",
]
`;

exports[`cmds:init initializes module: module-only - result 1`] = `
{
  "MODULENAME": "my-module",
  "_": [
    "init",
  ],
  "cwd": "<CWD>",
  "extensions": [
    "plpgsql",
    "citext",
  ],
  "name": "my-module",
}
`;

exports[`cmds:init initializes module: module-only - transformResults 1`] = `[]`;

exports[`cmds:init initializes module: module-only - writeResults 1`] = `[]`;

exports[`cmds:init initializes workspace: workspace - argv 1`] = `
{
  "_": [
    "init",
  ],
  "cwd": "<CWD>",
  "name": "my-workspace",
  "workspace": true,
}
`;

exports[`cmds:init initializes workspace: workspace - files 1`] = `
[
  "my-workspace/tsconfig.json",
  "my-workspace/pnpm-workspace.yaml",
  "my-workspace/package.json",
  "my-workspace/lerna.json",
  "my-workspace/launchql.json",
  "my-workspace/docker-compose.yml",
  "my-workspace/README.md",
  "my-workspace/Makefile",
  "my-workspace/LICENSE",
  "my-workspace/.questions.json",
  "my-workspace/.prettierrc.json",
  "my-workspace/.gitignore",
  "my-workspace/.eslintrc.json",
  "my-workspace/bin/install.sh",
]
`;

exports[`cmds:init initializes workspace: workspace - result 1`] = `
{
  "_": [
    "init",
  ],
  "cwd": "<CWD>",
  "name": "my-workspace",
  "workspace": true,
}
`;

exports[`cmds:init initializes workspace: workspace - transformResults 1`] = `[]`;

exports[`cmds:init initializes workspace: workspace - writeResults 1`] = `[]`;
